compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__float_1.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 556
expression: "\npub fn main(x) {\n  case x {\n    0.0 -> 1\n    1.1 -> 1\n    2.2 -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0.0 -> 1
    1.1 -> 1
    2.2 -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:3
  │  
3 │ ╭   case x {
4 │ │     0.0 -> 1
5 │ │     1.1 -> 1
6 │ │     2.2 -> 1
7 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _
