compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__inexhaustive_multi_pattern.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1313
expression: "\nlet a = Ok(1)\nlet b = True\ncase a, b {\n  Error(_), _ -> Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

let a = Ok(1)
let b = True
case a, b {
  Error(_), _ -> Nil
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:4:1
  │  
4 │ ╭ case a, b {
5 │ │   Error(_), _ -> Nil
6 │ │ }
  │ ╰─^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Ok(_), _
