compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__inexhaustive_multi_pattern4.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 1352
expression: "\npub fn main(c: Bool) {\n  let a = 12\n  let b = 3.14\n  case a, b, c {\n    1, 2.0, True -> Nil\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main(c: Bool) {
  let a = 12
  let b = 3.14
  case a, b, c {
    1, 2.0, True -> Nil
  }
}


----- ERROR
error: Inexhaustive patterns
  ┌─ /src/one/two.gleam:5:3
  │  
5 │ ╭   case a, b, c {
6 │ │     1, 2.0, True -> Nil
7 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    _, _, True
    _, _, False
