compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__exhaustiveness__label_1.snap
---
source: compiler-core/src_refactored/__core/type_/tests/exhaustiveness.rs
assertion_line: 736
expression: "\npub type Thing {\n  Thing(a: Bool, b: Bool)\n}\n\npub fn main(x) {\n  case x {\n    Thing(a: False, b: True) -> 1\n    Thing(b: False, a: True) -> 1\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Thing {
  Thing(a: Bool, b: Bool)
}

pub fn main(x) {
  case x {
    Thing(a: False, b: True) -> 1
    Thing(b: False, a: True) -> 1
  }
}


----- ERROR
error: Inexhaustive patterns
   ┌─ /src/one/two.gleam:7:3
   │  
 7 │ ╭   case x {
 8 │ │     Thing(a: False, b: True) -> 1
 9 │ │     Thing(b: False, a: True) -> 1
10 │ │   }
   │ ╰───^

This case expression does not have a pattern for all possible values. If it
is run on one of the values without a pattern then it will crash.

The missing patterns are:

    Thing(a: True, b: True)
    Thing(a: False, b: False)
